--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,34 @@
-#root {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* template */
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +69,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
