--- a/client/src/components/WishListGameCard.css
+++ b/client/src/components/WishListGameCard.css
@@ -6,15 +6,26 @@
     overflow: hidden;
   }
   
-  .game-image {
-    width: 40%; 
-    object-fit: cover;
-    border-radius: 8px 0 0 8px; 
+  .left-column {
+    width: 40%;
   }
   
-  .game-details {
-    padding: 16px;
+  .center-column {
     flex: 1;
+  }
+  
+  .right-column {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 16px;
+  }
+  
+  .game-image {
+    width: 100%;
+    object-fit: cover;
+    border-radius: 8px 0 0 8px;
   }
   
   .game-details h2 {
