added home elements back in, connected front end requests with back end on Games, GameDetail, and Home

--- a/client/src/components/ImageGameCard.css
+++ b/client/src/components/ImageGameCard.css
@@ -28,5 +28,5 @@
   }
   
   .image-game-card {
-    margin-bottom: 20px; /* Add margin between rows */
+    margin-right: 5px; /* Add margin between rows */
   }
