--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,4 +1,3 @@
-/* Reset some default styles */
 * {
   margin: 0;
   padding: 0;
@@ -75,45 +74,24 @@ body {
   }
 }
 
-.review-cards-container {
+.review-card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); 
-  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  padding: 20px;
+  gap: 15px;
 }
 
 .review-card-container {
+  width: 300px; 
   border: 1px solid #ccc;
   border-radius: 8px;
-  display: flex;
-}
-
-.review-item {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  width: 100%;
+  overflow: hidden;
 }
 
 .game-image {
-  width: 100%; 
-  height: auto; 
+  width: 100%;
+  height: 150px; 
+  object-fit: cover;
   border-radius: 4px;
   margin-bottom: 10px;
-}
-
-.rating {
-  margin-bottom: 10px;
-}
-
-.comment-user-section {
-  display: flex;
-  flex-direction: column;
-}
-
-.comment {
-  margin-bottom: 5px;
-}
-
-.user {
-  margin-top: auto; /* Push user to the bottom */
 }
